# twinkle

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  HANDOFF.md  LICENSE  Makefile  README.md  test_parse.tw  twinkle.toml
.githooks/: pre-commit
benches/: compile.rs  wasm_exec.rs
boot/: main.tw  playground.tw  twinkle.toml
docs/: API.md  README.md  backlog.md  compare-to-other-pl-immutable.md  contracts.md  gaps.md  grammar.ebnf  immtable-with-cell.md  immutability.md  immutable.md  ir.md  js-embedding.md  module.md  open-questions.md  persistent-runtime.md  phase0_completion_status.md  plan.md  query-pipeline.md  records.md  spec.md  stage2_3_integration.md  stage3_plan_updated.md  stdlib.md  tbc.md  test-plan.md  traits.md
examples/: README.md  adder.tw  api_ergonomics.tw  api_ergonomics_shorthand.tw  cell.tw  closure.tw  eq.tw  extern_ffi.tw  fizzbuzz.tw  fizzbuzz_collect.tw  fizzbuzz_enum.tw  immutable.tw  list_ops.tw  option.tw  point.tw  result.tw  safe_math.tw  tree.tw  view.tw  word_count.tw
playground/: index.html  package-lock.json  package.json  vite.config.js
prelude/: byte.tw  dict.tw  float.tw  int.tw  iterator.tw  option.tw  result.tw  string.tw  vector.tw
scripts/: bench_compare_refs.sh  bench_exec_compare_refs.sh  test-suites.sh
src/: backend_pipeline.rs  compiler_lib.rs  lib.rs  main.rs
stdlib/: fs.tw  io.tw  numeric.tw  path.tw  proc.tw  stack.tw
tests/: anf_test.rs  backend_pipeline_alignment_test.rs  bench_monomorphize_test.rs  boot_codegen_integration_test.rs  boot_codegen_vector_regression_test.rs  cow_analysis.rs  (+30 more)
(+1963 files in other folders)
