[package]
name = "twinkle"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "twk"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

[dev-dependencies]
insta = { version = "1.34", features = ["glob"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "compile"
harness = false
