[package]
name = "twinkle"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "twk"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
wasmtime = "38.0.3"
wat = "1.245.1"
serde_json = "1.0"
url = "2.5"

[dev-dependencies]
insta = { version = "1.34", features = ["glob"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "compile"
harness = false

[[bench]]
name = "wasm_exec"
harness = false
