[package]
name = "twinkle"
version = "0.1.0"
edition = "2024"
default-run = "twk"

[[bin]]
name = "twk"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
wasmtime = "38.0.3"
wat = "1.245.1"
serde_json = "1.0"
url = "2.5"

[dev-dependencies]
insta = { version = "1.34", features = ["glob"] }
